syntax = "proto3";

package proto;

service Scheduler {
    rpc dlChannel(ChannelRequest) returns (Empty) {}

    rpc dlPlaylist(PlaylistRequest) returns (Empty) {}

    rpc dlTag(TagRequest) returns (Empty) {}
}

message Empty {}

enum site {
  niconico = 0;
  bilibili = 1;
  youtube = 2;
}

message ChannelRequest {
    site website = 1;
    string userID = 2; // User who made the request
    string channelID = 3;
}

message PlaylistRequest {
    site website = 1;
    string userID = 2; // User who made the request
    string playlistID = 3;
}

message TagRequest {
    site website = 1;
    string userID = 2; // User who made the request
    string tagValue = 3;
}